--- a/Rest_API/Dockerfile
+++ b/Rest_API/Dockerfile
@@ -1,5 +1,7 @@
-FROM java:8
-COPY target/rest-API-0.0.1-SNAPSHOT.jar /workspace/rest-API-0.0.1-SNAPSHOT.jar
+FROM maven:3.6.0-jdk-8-alpine
+COPY ./ /workspace
 WORKDIR /workspace
 EXPOSE 8081
+RUN mvn clean install -DskipTests
+VOLUME /workspace /root/.m2
 ENTRYPOINT ["java","-jar"]
