Begin to setup Mongo Config

--- a/Rest_API/src/main/resources/application.properties
+++ b/Rest_API/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 server.port=8081
 
-
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+spring.data.mongodb.authentication-database= admin
+spring.data.mongodb.database=test
+# spring.data.mongodb.field-naming-strategy=
+# spring.data.mongodb.grid-fs-database=
+spring.data.mongodb.host=localhost 
+spring.data.mongodb.password= example
+spring.data.mongodb.port=27017
+spring.data.mongodb.repositories.enabled=true
+spring.data.mongodb.uri=mongodb://localhost:27017/test
+spring.data.mongodb.username= root
