--- a/Rest_API/docker-compose.yml
+++ b/Rest_API/docker-compose.yml
@@ -7,15 +7,28 @@ services:
     ports:
     - "4000:8081"
     
-  db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+  mongo:
+    image: mongo
+    volumes:
+      - tockmongo:/data/db
     restart: always
     ports:
-    - "3305:3306"
+    - "27017:27017"
     environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: test
-      MYSQL_USER: lamaud
-      MYSQL_PASSWORD: lamaud
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express:
+    image: mongo-express
+    volumes:
+      - tockmongo:/data/db
+    restart: always
+    ports:
+    - "8082:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      
+volumes:
+  tockmongo:
     
