--- a/Rest_API/docker-compose.yml
+++ b/Rest_API/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   javaclient:
-    image: lamaud/rest-api:1.3
+    image: lamaud/rest-api:1.4
     command: target/rest-API-0.0.1-SNAPSHOT.jar
     ports:
     - "4000:8081"
@@ -11,6 +11,7 @@ services:
     image: mongo
     volumes:
       - tockmongo:/data/db
+      - $PWD/mongo-entrypoint/:/docker-entrypoint-initdb.d/
     restart: always
     ports:
     - "27017:27017"
