--- a/Rest_API/src/main/resources/application.properties
+++ b/Rest_API/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 server.port=8081
 
-spring.data.mongodb.authentication-database= admin
-spring.data.mongodb.database=test
-# spring.data.mongodb.field-naming-strategy=
-# spring.data.mongodb.grid-fs-database=
-spring.data.mongodb.host=localhost 
-spring.data.mongodb.password= example
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+spring.data.mongodb.database=test
+spring.data.mongodb.username=test
+spring.data.mongodb.password=test
 spring.data.mongodb.repositories.enabled=true
-spring.data.mongodb.uri=mongodb://localhost:27017/test
-spring.data.mongodb.username= root
