Finalize mongo connection with docker-compose

--- a/Rest_API/src/main/resources/application.properties
+++ b/Rest_API/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=rest_api_mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
 spring.data.mongodb.username=test
